# led-dot-clk

./: .gitignore  .gitmodules  .pre-commit-config.yml  .yamllint  Cargo.toml  LICENSE  README.md  build.rs  esp-hal.patch  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
enclosure/: Base.FCStd
src/: bsp.rs  config.rs  display.rs  error.rs  log_wrapper.rs  main.rs  max7219_led_matrix.rs  ntp.rs  system.rs  utils.rs  wifi.rs
src/bsp/: display.rs  max7219_led_matrix.rs
src/system/: display.rs  motion_sensor.rs  mqtt.rs  time.rs  wifi.rs
