[package]
name = "led-dot-clk"
version = "0.1.0"
authors = ["Rafal Ulko <Rafal.Ulko@sigmaconnectivity.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.22" }
esp-alloc = { path = "./esp-hal/esp-alloc" }
esp-backtrace = { path = "./esp-hal/esp-backtrace", features = [
    "esp32c2",
    "panic-handler",
    "println",
] }
esp-hal = { path = "./esp-hal/esp-hal", features = [
    "esp32c2",
    "log-04",
    "unstable",
] }
esp-println = { path = "./esp-hal/esp-println", features = [
    "esp32c2",
    "log-04",
] }
esp-radio = { path = "./esp-hal/esp-radio", features = [
    "esp32c2",
    "wifi",
    "unstable",
] }
esp-bootloader-esp-idf = { path = "./esp-hal/esp-bootloader-esp-idf", features = [
    "esp32c2",
] }
esp-rtos = { path = "./esp-hal/esp-rtos", features = [
    "esp32c2",
    "embassy",
    "esp-radio",
] }
embassy-executor = { version = "0.9.1" }
embassy-net = { version = "0.8.0", features = [
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-embedded-hal = "0.5.0"
embassy-futures = "0.1.2"
embedded-hal-async = "1.0"
heapless = { version = "0.9.1", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
sntpc = { version = "0.8.1", default-features = false, features = [] }
sntpc-net-embassy = { version = "0.8.0", default-features = false, features = [
    "log",
] }
chrono = { version = "0.4.41", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
ds3231 = { version = "0.3.0", features = ["async", "temperature_f32"] }
circular-buffer = { version = "1.2.0", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[lints.clippy]
get_unwrap = "deny"
expect_used = "deny"
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
