[package]
name = "led-dot-clk"
version = "0.1.0"
authors = ["Rafal Ulko <Rafal.Ulko@sigmaconnectivity.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.22", optional = true }
defmt = { version = "1.0.1", optional = true }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", features = [
    "esp32c2",
    "panic-handler",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", features = [
    "esp32c2",
    "unstable",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", default-features = false, features = [
    "esp32c2",
    "critical-section",
    "uart",
] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", features = [
    "esp32c2",
    "wifi",
    "unstable",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", features = [
    "esp32c2",
] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b1270d51f4893c843c6bdd544c2bdc5d9b884", features = [
    "esp32c2",
    "embassy",
    "esp-radio",
] }
embassy-executor = { version = "0.9.1" }
embassy-net = { version = "0.8.0", features = [
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-embedded-hal = "0.5.0"
embassy-futures = "0.1.2"
embedded-hal-async = "1.0"
heapless = { version = "0.9.1", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
sntpc = { version = "0.8.1", default-features = false, features = [] }
sntpc-net-embassy = { version = "0.8.0", default-features = false }
chrono = { version = "0.4.44", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
ds3231 = { version = "0.3.0", features = ["async", "temperature_f32"] }
circular-buffer = { version = "1.2.0", default-features = false }

[features]
default = []
log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-hal/log-04",
    "esp-println/colors",
    "esp-println/log-04",
    "sntpc-net-embassy/log",
]
defmt = [
    "chrono/defmt",
    "dep:defmt",
    "ds3231/defmt",
    "embassy-executor/defmt",
    "esp-backtrace/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-radio/defmt",
    "sntpc-net-embassy/defmt",
    "sntpc/defmt",
    "embedded-hal-async/defmt-03",
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[lints.clippy]
get_unwrap = "deny"
expect_used = "deny"
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
